--- a/教育邮箱.md
+++ b/教育邮箱.md
@@ -3,8 +3,8 @@
 - 桂工自带校园邮箱，在微信上，关注公众号“**桂林理工大学智慧校园**”，桂工服务-个人中心-学校邮箱-找回密码，修改好密码即可。
 - 打开[office365教育版](https://www.microsoft.com/zh-cn/education/products/office/default.aspx)这个网站，在![alt](https://ws1.sinaimg.cn/large/c13993a9gy1fwxhcbqe3dj20ya0l9h4e.jpg)这里填入你的**校园邮箱**账号，之后一步一步往下就好。
 - 到达一个要注册账号的地方，有个填写验证码的地方，登录到校园邮箱里，获取这个验证码。在[腾讯企业邮箱](https://exmail.qq.com/)（别问为什么是腾讯，因为我们学校跟他们py了啊）登录你的校园邮箱，输入你刚刚改好的密码，找到微软发给你的验证码，填入到相应地方即可。**对了，最后有个是填写邀请人邮箱的，那个跳过**
-- <S>这样就免费获取到了office365教育版，其中包含office全套软件，以及one drive（微软的网盘） **1T空间**（是不是很心动？普通用户只有5G哦）。office搭配one drive非常爽，编辑文档可以直接保存在云盘内，不怕丢失。</S>
-- 抱歉，关于上一条，桂工并没有跟微软进行py，（也就是没有交钱）所以无法获取免费的office全套以及1T空间，但是校园邮箱还是具有很大作用的。
+- <S>这样就免费获取到了office365教育版，其中包含office全套软件，</S>以及one drive（微软的网盘） **1T空间**（是不是很心动？普通用户只有5G哦）。office搭配one drive非常爽，编辑文档可以直接保存在云盘内，不怕丢失。
+- 抱歉，关于上一条，桂工并没有跟微软进行py，（也就是没有交钱）所以无法获取免费的office全套，但是one drive的1T空间还是有的。有人问我这个有没有时间限制，我无法作保证，但是已知有毕业的学长仍在使用。而且校园邮箱还是具有很大作用的。
 
 # 校园邮箱的妙用
 
